examples/test/testpolicy14940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14940
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key5: value9
      key34: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value14
          key40: value4
          key27: value13
      podSelector:
        matchLabels:
          key33: value24
